- Implemented the ndhist rebin_axis(axis, nbins_to_merge) method that changes
  the current ndhist object, if the current ndhist object is not a view. If it
  is a view, a deep copy is created first.
  The rebin_axis method returns a reference to the changed ndhist object.

  The reason for letting rebin_axis operate on the ndhist object itself is the
  fact, that this operation can be done very efficiently without the need of
  a copy of all the data. In principle rebin_axis could take a kwarg named
  copy=True, that would call the deepcopy() method first if needed. This would
  mimic the behavior of dashi, that always creates a copy when rebinning.
  In principle, rebin_axis could also take a tuple for axis and nbins_to_merge
  and could rebin several axes at once.

- Implemented unit tests for basic slicing.

- Implemented unit tests for ndhist's deepcopy method.

- Implemented the ndhist.deepcopy() method. It creates a copy of the ndhist
  object. It also copies the underlaying data, i.e. a ndhist view becomes an
  ordinary ndhist object.

- Added the Axis properties has_underflow_bin and has_overflow_bin and adjusted
  the implementation of the derived axis classes and ndhist.
  The reasoning behind these two properties is the proper behaviour of the
  constant_bin_width_axis class, especially when creating slice histograms.
  A slice histogram could hold only a single bin (i.e. the under- or overflow
  bin). Since edge values of under- and overflow bins could be special values
  (e.g. -inf or +inf), special care has to be taken when dealing with those
  bins. The new properties (that replace the has_oor_bins property) define if
  an axis contains an underflow and/or overflow bin.

- Introduced interface via static function calls to the ValueCacheBase class,
  thus methods can be called when only holding a base class pointer.

- Implemented the copy constructor for detail::ndarray_storage that copies also
  the bytearray.
